--- a/src/components/ProjectImages/index.module.css
+++ b/src/components/ProjectImages/index.module.css
@@ -2,9 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 24px;
+  margin: 0 20px 24px 20px;
   border-radius: 16px;
-  padding: 20px;
 }
 .projectImage img {
   width: 100%;
