--- a/src/components/ProjectInfo/index.module.css
+++ b/src/components/ProjectInfo/index.module.css
@@ -6,6 +6,7 @@
 }
 
 .projectInfoWrapper p {
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 .line {
@@ -13,7 +14,18 @@
   width: 20px;
   border-radius: 2px;
   margin-bottom: 8px;
-  background-color: rgb(44, 62, 86);
+  background-color: #2c3e56;
+}
+
+.linkToProject {
+  color: #2b52d0;
+  font-weight: 700;
+  transition: all 0.3s ease-in-out;
+}
+
+.linkToProject:hover,
+.linkToProject:focus {
+  color: #2b52d0cb;
 }
 @media screen and (min-width: 768px) {
   .projectInfoWrapper {
@@ -24,11 +36,26 @@
   .projectInfoWrapper > div {
     width: 33.333%;
   }
+
+  .projectInfoWrapper p {
+    padding: 0 10px;
+  }
+
+  .line {
+    margin-left: 10px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .projectInfoWrapper {
     margin: 70px auto;
     width: 80vw;
+  }
+  .projectInfoWrapper p {
+    padding: 0;
+  }
+
+  .line {
+    margin-left: 0;
   }
 }
